--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <h1>Welcome to ProgStick</h1>
-    <p>Experience the innovation and creativity of the ProgStick!</p>
+    <p>We'll be back soon to program and help your ice cream stick projects get moving!</p>
     <img src="img/mstile-150x150.png" alt="ProgStick Logo" width="200">
 </body>
 </html>
