--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 100px;
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
         }
-        h1 {
-            font-size: 24px;
-        }
-        p {
-            font-size: 18px;
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
     </style>
         <script>
@@ -29,8 +29,7 @@
         </script>
 </head>
 <body>
-    <h1>Welcome to ProgStick</h1>
-    <p>We'll be back soon to program and help your ice cream stick projects get moving!</p>
-    <img src="img/mstile-150x150.png" alt="ProgStick Logo" width="200">
+    <iframe src="https://mailchi.mp/98c281156bbf/progstick" frameborder="0"></iframe>
 </body>
 </html>
+
