--- a/palitos.html
+++ b/palitos.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>ProgStick</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+    <link rel="manifest" href="img/site.webmanifest">
+    <link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+        <script>
+            if (window.location.protocol === "http:") {
+                window.location.href = "https://" + window.location.host + window.location.pathname;
+            }
+        </script>
+</head>
+<body>
+    <iframe src="https://dq4qmd-3000.csb.app" frameborder="0"></iframe>
+</body>
+</html>
