--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ProgStick</title>
+    <title>ProgStick Update</title>
     <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png">
     <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
